# ro-crate-provenance-tools

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  MANAGEMENT.md  Makefile  README.md  RELEASE.md  coastsat_prov.py  provenance_toon_cheatsheet.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
med_prov.crate/: packed.cwl  primary-job.json  ro-crate-metadata.json
provenance_context/: __init__.py
scripts/: bump-version.sh
tests/: README.md  __init__.py  conftest.py  test_crate_loading.py  test_file_resolution.py  test_internal_helpers.py  test_lineage.py  test_site_artifacts.py  test_toon.py
